--- a/pom.xml
+++ b/pom.xml
@@ -6,5 +6,8 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>hellospring03</module>
+		<module>emaillist03</module>
+		<module>guestbook03</module>
 	</modules>
+	
 </project>
