--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
-		<module>hellospring03</module>
+		<module>hellospring</module>
 		<module>emaillist03</module>
 		<module>guestbook03</module>
 	</modules>
